<resources>
    <string name="app_name">ConverterLab</string>
    <string name="pre_phone">Тел.: </string>
    <string name="pre_address">Адрес : </string>
    <string name="currency_name_rus">Название валюты</string>
    <string name="ask_bid_str_rus">Покупка/ Продажа</string>
    <string name="link_rus">Ссылка : </string>
    <string name="pre_city">Город : </string>
    <string name="pre_region">Область : </string>
    <string name="pre_org_type">Тип организации : </string>
    <string name="search">Search</string>
    <string name="searc">Search</string>
    <string name="share">share</string>
    <string name="share_button">SHARE</string>
    <string name="menu_map">Карта</string>
    <string name="menu_link">Сайт</string>
    <string name="menu_call">Позвонить</string>
    <string name="link">Ссылка :</string>
</resources>
