<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_main_DC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorCardBackground"
            android:padding="@dimen/card_padding"
            card_view:cardElevation="@dimen/card_view_elevation">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorCardBackground"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_title_DC"
                    style="@style/CardTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTextMain"
                    android:textSize="@dimen/title_text_size"
                    android:textStyle="bold"
                    tools:text="Alpha-bank" />

                <TextView

                    style="@style/CardTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/link" />

                <TextView
                    android:id="@+id/tv_link_DC"
                    style="@style/CardTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="all"
                    tools:text="https://google.com" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/CardTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pre_phone" />

                    <TextView
                        android:id="@+id/tv_phone_DC"
                        style="@style/CardTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        tools:text="050 372 09 09" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_pre_city_DC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView

                        style="@style/CardTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pre_region" />

                    <TextView
                        android:id="@+id/tv_region_DC"
                        style="@style/CardTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        tools:text="Transkarpatia" />
                </LinearLayout>

                <LinearLayout

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView

                        style="@style/CardTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pre_city" />

                    <TextView
                        android:id="@+id/tv_city_DC"
                        style="@style/CardTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        tools:text="Uzhhorod" />
                </LinearLayout>

                <LinearLayout

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView

                        style="@style/CardTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pre_address" />

                    <TextView
                        android:id="@+id/tv_address_DC"
                        style="@style/CardTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        tools:text="Korzo st.9" />
                </LinearLayout>

                <LinearLayout

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView

                        style="@style/CardTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pre_org_type" />

                    <TextView
                        android:id="@+id/tv_org_type_DC"
                        style="@style/CardTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        tools:text="Banks" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_title_curr_DC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_view_main_DC"
            android:background="@color/colorCardBackground"
            android:padding="@dimen/card_padding"
            card_view:cardElevation="@dimen/card_view_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/CardTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/currency_name_rus"
                    android:textStyle="bold" />

                <TextView
                    style="@style/CardTextView"
                    android:layout_width="100sp"
                    android:layout_height="wrap_content"
                    android:text="@string/ask_bid_str_rus" />


            </LinearLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_view_title_curr_DC"
            android:background="@color/colorCardBackground"
            android:padding="@dimen/card_padding"
            card_view:cardElevation="@dimen/card_view_elevation">


            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_DC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/card_view_main_DC"
                android:padding="@dimen/card_padding" />


        </android.support.v7.widget.CardView>



    </RelativeLayout>

</ScrollView>